--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <!--link type="text/static/css" rel="stylesheet" href="/static/css/bootstrap-theme.min.css"-->
         <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
         <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
         <link type="text/css" rel="stylesheet" href="/static/css/template.css">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/static/css?family=Roboto:300,400,500,700" type="text/css">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
@@ -71,7 +70,6 @@
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/ripples.min.js"></script>
         <script src="/static/js/material.min.js"></script>
-        <script src="/static/js/material.js"></script>
         <script src="/static/js/template.js"></script>
         <script>
 $.material.init();
