--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
+    <title>Kirino - wifi_sl_gen application</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <!--link type="text/css" rel="stylesheet" href="/css/bootstrap-theme.min.css"-->
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/template.css">
