--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Kirino - wifi_sl_gen application</title>
+    <title>Создание служебной записки - ПРЦНИТ СГУ</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <label for="inputMac" class="col-md-2 control-label">Mac</label>
                     <div class="col-md-10">
-                        <input type="mac" name="mac1" class="form-control mac_valid mac" id="inputEmail"
+                        <input type="mac" name="mac1" class="form-control mac_valid mac" id="inputMac"
                                placeholder="Mac" required>
                         <span class="help-block">Введите Mac адрес в формате XX-XX-XX-XX-XX-XX, где ХХ - цифры или латинские буквы от A до F</span>
                     </div>
@@ -44,14 +44,14 @@
                 <div class="form-group">
                     <label for="inputName" class="col-md-2 control-label">Ф.И.О.</label>
                     <div class="col-md-10">
-                        <input type="name" name="user1" class="form-control name" id="inputPassword"
+                        <input type="name" name="user1" class="form-control name" id="inputName"
                                placeholder="Ф.И.О" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword" class="col-md-2 control-label">Номер телефона</label>
+                    <label for="inputPhone" class="col-md-2 control-label">Номер телефона</label>
                     <div class="col-md-10">
-                        <input type="telnumber" name="tel1" class="form-control phone" id="inputPassword"
+                        <input type="telnumber" name="tel1" class="form-control phone" id="inputPhone"
                                placeholder="Номер телефона" required>
                     </div>
                 </div>
